--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor")
     //live data
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'    //android x version
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     //room
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'    //optional
